<resources>
    <string name="app_name">NowChat</string>
    <string name="need_to_create_account">Need to Create Account ?</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">      Create Account</string>
    <string name="logout">Logout</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="this_is_main_activity_page">This is Main Activity Page</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name2">Name</string>
    <string name="hi_there_i_am_using_nowchat">Hi There I am Using NowChat</string>
    <string name="change_image">CHANGE IMAGE</string>
    <string name="change_status">CHANGE STATUS</string>
    <string name="existing_users_login">Existing Users Login</string>
    <string name="welcome_to_nowchat">Welcome to NOWChat</string>
    <string name="display_name">Display Name</string>
    <string name="users_status_is_shoen_here">users status is shoen here</string>
</resources>
