<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yasir.nowchat.StartActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/welcome_to_nowchat"
        android:textSize="25sp" />

    <Button
        android:id="@+id/start_to_register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:onClick="OnStartToRegisterButtonClick"
        android:text="@string/need_to_create_account"
        android:textColor="#fff"/>

    <Button
        android:id="@+id/startt_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start_to_register_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:onClick="OnclickForLoginButton"
        android:text="@string/existing_users_login"
        android:textColor="#fff"/>
</RelativeLayout>
